--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^3.8.7",
     "gulp-csso": "^0.2.9",
     "gulp-gh-pages": "^0.3.3",
+    "gulp-livereload": "^2.1.1",
     "gulp-rename": "^1.2.0",
     "gulp-stylus": "^1.3.0",
     "nib": "^1.0.3"
